# py_steenrod

./: .gitignore  C2Ceta-convtest2.mdf  C2Ceta.json  README.md  adem.py  bruner-json-convert.py  change-basis.py  csteen-callgrind.sh  empty_lines  index.html  make  make_run  make_valgrind  makeandrun  milnor.py  steenrod_calculator.html  steenrod_modules  unstable_ext.html
Bruner-modules/: C2Ceta  Ceta  P100  Q1  RP2  RP4
C/: CMakeLists.txt  CSteenrod.pc  CSteenrod.pc.in
C/include/: algebra.h  combinatorics.h  milnor.h
C/src/: AdemAlgebra.c  AdemAlgebra.h  FiniteDimensionalModule.c  FiniteDimensionalModule.h  FpVector.c  FpVector.cpp  FpVector.h  FreeModule.c  FreeModule.h  FreeModuleHomomorphism.c  FreeModuleHomomorphism.h  Matrix.c  Matrix.h  MilnorAlgebra.c  MilnorAlgebra.h  Module.c  Module.h  ResolutionHomomorphism.c  ResolutionHomomorphism.h  a.out  adem.c  adem.h  adem_io.c  algebra.c  algebra.h  combinatorics.c  combinatorics.h  khash_test.c  main.c  main.h  milnor.c  milnor.h  milnor_datatypes.c  milnor_datatypes.h  milnor_io.c  milnor_private.h  modules.c  modules.h  resolution.c  resolution.h
Cemsdk/: CMakeLists.txt  CSteenrod.js  CSteenrod.wasm  CSteenrodWrappers.js  CalculatorWorker.js  ResolutionWorker.js  SteenrodWrapper.js  cmake_install.cmake
modules/: C2  C2.json  C2Ceta-convtest.json  C2Ceta.json  C2_sm_DC2.json  C3.json  CP-1  CP2  MxM.mdf  Q2  S_2.json  Y.json  Y_sm_DY.json  Y_sm_Y.json  ko.json  module_registry.json  test.json  tmf.json  tmf2.json
output_data/: AdemAlgebra2_75.json  MilnorAlgebra2_80.json  MilnorAlgebra3_100.json  S2-100-external.json  sage_steenrod_mults_2_Adem_max_40.json  sage_steenrod_mults_5_Adem_max_200.json  sage_steenrod_mults_5_Milnor_max_200.json  sage_steenrod_mults_7_Adem_max_400.json
output_data/sage_steenrod_mults/: sage_steenrod_mults_2_Adem_max_30.json  sage_steenrod_mults_2_Milnor_max_40.json  sage_steenrod_mults_7_Milnor_max_400.json
output_data/stems/: MilnorAlgebra2_50.json  S3-100-external.json
python/: FpVectorSpace.py  FreeModule.py  adem.py  combinatorics.py  infinity.py  main.py  milnor.py  standard_modules.py  steenrod.py  steenrod_module.py
python/CWrappers/: cAdemAlgebra.py  cAlgebra.py  cFiniteDimensionalModule.py  cFpVector.py  cFreeModule.py  cFreeModuleHomomorphism.py  cMilnorAlgebra.py  cMilnorBasisElement.py  cResolution.py  cmilnor.py  cmodules.py  csteenrod.py  ctypes_FpVector.py  ctypes_adem.py  ctypes_algebra.py  ctypes_combinatorics.py  ctypes_milnor.py  ctypes_milnor_datatypes.py  ctypes_modules.py  ctypes_resolution.py  ctypes_wrap.py  exhaustive_test_cAdem.py  exhaustive_test_cMilnor.py  row_reduce.py  test_cFpVector.py  test_cMilnorAlgebra.py  test_cmilnor.py
src/: FpVectorSpace.py  adem.py  bruner-json-convert.py  combinatorics.py  memoized.py  milnor.py  steenrod.py  steenrod_module.py
test/: FpVectorSpace_test1.py  adem_test.py  combinatorics_test.py  compare_json_output.py  milnor_test.py  steenrod_module_test1.py  steenrod_test.py
test/C_via_python_wrappers/: exhaustive_test_cAdem.py  exhaustive_test_cMilnor.py  test_cAdemAlgebra.py  test_cFpVector.py  test_cMilnorAlgebra.py  test_cResolution.py  test_compare_py_mult_to_C_mult.py  test_compare_sage_mult_to_C_mult.py
test/python/: adem_test.py  combinatorics_test.py  milnor_test.py  steenrod_test.py
